Sensores, values por localización (region)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="myapp.surfer.com.myapp.MainActivity"
     android:orientation="vertical"
+    android:id="@+id/linear"
     >
 <!-- match_parent es lo mismo que fill_parent -->
     <!-- RelativeLayout: inidica que los controles va estar en una posición relativa con respecto a otra -->
@@ -15,6 +15,7 @@
         android:id="@+id/tvTexto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="45px"
         android:text="@string/mensaje"
         android:gravity="center_horizontal"
 
